// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvertCard Component renders correctly with all props 1`] = `
<TouchableOpacity
  activeOpacity={0.95}
  onPress={[Function]}
  style={
    {
      "backgroundColor": "black",
      "flex": 1,
      "height": 800,
      "width": 400,
    }
  }
>
  <View
    style={
      {
        "height": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <Image
      progressiveRenderingEnabled={true}
      resizeMethod="resize"
      source={
        {
          "uri": "https://example.com/ad-image.jpg",
        }
      }
      style={
        {
          "height": 800,
          "resizeMode": "cover",
          "width": "100%",
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.7)",
          "borderRadius": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 6,
          "position": "absolute",
          "right": 10,
          "top": 10,
          "zIndex": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 12,
            "fontWeight": "bold",
          }
        }
      >
        Sponsored
      </Text>
    </View>
    <LinearGradient
      colors={
        [
          "transparent",
          "rgba(0,0,0,0.7)",
        ]
      }
      style={
        {
          "bottom": 0,
          "height": "50%",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "zIndex": 5,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 150,
          "left": 0,
          "paddingHorizontal": 20,
          "position": "absolute",
          "right": 0,
          "zIndex": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 28,
            "fontWeight": "bold",
            "textAlign": "center",
            "textShadowColor": "rgba(0, 0, 0, 0.75)",
            "textShadowOffset": {
              "height": 1,
              "width": 1,
            },
            "textShadowRadius": 3,
          }
        }
      >
        Test Advertisement
      </Text>
    </View>
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "alignSelf": "center",
          "backgroundColor": "#ff0000",
          "borderColor": "rgba(255, 255, 255, 0.3)",
          "borderRadius": 30,
          "borderWidth": 2,
          "bottom": 70,
          "elevation": 4,
          "paddingHorizontal": 32,
          "paddingVertical": 16,
          "position": "absolute",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.25,
          "shadowRadius": 3,
          "zIndex": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 18,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        Click Here
      </Text>
    </TouchableOpacity>
  </View>
</TouchableOpacity>
`;

exports[`AdvertCard Component renders correctly without an image 1`] = `
<TouchableOpacity
  activeOpacity={0.95}
  onPress={[Function]}
  style={
    {
      "backgroundColor": "black",
      "flex": 1,
      "height": 800,
      "width": 400,
    }
  }
>
  <View
    style={
      {
        "height": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "height": 800,
            "resizeMode": "cover",
            "width": "100%",
          },
          {
            "alignItems": "center",
            "backgroundColor": "#e0e0e0",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#888",
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        Advertisement
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.7)",
          "borderRadius": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 6,
          "position": "absolute",
          "right": 10,
          "top": 10,
          "zIndex": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 12,
            "fontWeight": "bold",
          }
        }
      >
        Sponsored
      </Text>
    </View>
    <LinearGradient
      colors={
        [
          "transparent",
          "rgba(0,0,0,0.7)",
        ]
      }
      style={
        {
          "bottom": 0,
          "height": "50%",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "zIndex": 5,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "bottom": 150,
          "left": 0,
          "paddingHorizontal": 20,
          "position": "absolute",
          "right": 0,
          "zIndex": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 28,
            "fontWeight": "bold",
            "textAlign": "center",
            "textShadowColor": "rgba(0, 0, 0, 0.75)",
            "textShadowOffset": {
              "height": 1,
              "width": 1,
            },
            "textShadowRadius": 3,
          }
        }
      >
        Test Advertisement
      </Text>
    </View>
    <TouchableOpacity
      onPress={[Function]}
      style={
        {
          "alignSelf": "center",
          "backgroundColor": "#ff0000",
          "borderColor": "rgba(255, 255, 255, 0.3)",
          "borderRadius": 30,
          "borderWidth": 2,
          "bottom": 70,
          "elevation": 4,
          "paddingHorizontal": 32,
          "paddingVertical": 16,
          "position": "absolute",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.25,
          "shadowRadius": 3,
          "zIndex": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffff",
            "fontSize": 18,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        Click Here
      </Text>
    </TouchableOpacity>
  </View>
</TouchableOpacity>
`;
